# vmsifter

./: CLAUDE.md  Dockerfile  corruption.py  meson.build  pyproject.toml
bench/: .dockerignore  pyproject.toml  xed_build.py
bench/bench/: cli.py  container_entrypoint.py  diff.py  docker_runtime.py  normalize.py  progress.py  runner.py  schema.py  validator.py
bench/bench/backends/: __init__.py  base.py  capstone_be.py  unicorn_be.py  xed.py
bench/containers/capstone/: Dockerfile
bench/containers/unicorn/: Dockerfile
bench/containers/xed/: Dockerfile
bench/tests/: conftest.py  test_cli.py  test_container_entrypoint.py  test_diff.py  test_docker_runtime.py  test_runner.py  test_schema.py  test_validator.py  test_xed_docker_integration.py
bench/tests/data/: xed_validate_discrepancies.csv
bench/tests/test_backends/: test_capstone.py  test_unicorn.py  test_xed.py
docs/source/: index.md
docs/source/reference/: architecture.md  vision.md  xen-patches.md
src/: dummy_injector.c  xed_injector.c
tests/fixtures/: mock_socket.py
tests/integration/disasm/: test_bench.py  test_pool.py
tests/unit/: test_distributed.py  test_scheduler.py  test_split.py  test_tunnel.py
vmsifter/: executor.py  output.py  scheduler.py  worker.py
vmsifter/config/: __init__.py
vmsifter/fuzzer/: __init__.py  csv.py  drizzler.py  random.py  split.py  tunnel.py  types.py
vmsifter/injector/: __init__.py  dummy.py  xed.py
